@@ -22,3 +22,5 @@ Glob should have a flag preventing throwing an exception when no files are
 found. 
 
 Arg's manpage should use {} to initialize LongOptions
+
+Exception's manpage should mention g_errno
