@@ -1,0 +1,4 @@
+namespace FBB
+{
+    int g_errno;
+}
