@@ -9,6 +9,8 @@
 namespace FBB
 {
 
+extern int g_errno;
+
 class Exception: public std::exception
 {
     template <typename Type>
