@@ -5,6 +5,9 @@
     in underflow members of (i)streambuf classes to prevent promotions of
     characters 0xff to -1, which is EOF.
 
+  * Since the global errno variable is used by too much code, Exception{x}
+    constructors now also store x in a global int FBB::g_errno variable.
+
 bobcat (4.03.01)
 
   * Added missing DateTime::timeStruct (inline) implementation to DateTime
